# rdk-xr_mq

./: CONTRIBUTING.md  configure.ac
src/: Makefile.am  xr_mq.c  xr_mq.h
